--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,11 @@ body {
     li {
       font-family: 'Arimo', sans-serif;
     }
+svg {
+  display: block;
+  vertical-align: middle;
+  color: white;
+}
+svg:hover {
+  color: #de6a07;
+}
