--- a/src/index.css
+++ b/src/index.css
@@ -34,10 +34,11 @@
 
 h1 {
   font-family: 'Neuething Sans Test', sans-serif;
-  font-weight: 900; /* Black */
+  font-weight: 900;
+  line-height: 1.5; /* Black */
 }
 
-h2 {
+h2, span {
   font-family: 'Neuething Sans Test', sans-serif;
   font-weight: 800; /* ExtraBold */
 }
