--- a/src/index.css
+++ b/src/index.css
@@ -68,3 +68,32 @@ svg {
 svg:hover {
   color: #de6a07;
 }
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+.flip-card-back {
+  border-radius: 20px;
+  align-items: center;
+  padding: 50px;
+  background-color: white;
+  color: black;
+  transform: rotateY(180deg);
+}
+@media screen {
+  
+}
